--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,21 @@
 baseURL = "http://example.org/"
-languageCode = "en-us"
 title = "My New Hugo Site"
+DefaultContentLanguage: sr
+defaultContentLanguageInSubdir: true
+copyright: Aeolus d.o.o Novi Sad
+languages:
+     en:
+          contentDir: content/en
+          languageName: English
+          title: Aeolus
+          weight: 30 
+     ru:
+          contentDir: content/ru
+          languageName: Русский 
+          title: Aeolus
+          weight: 10
+     sr:  
+          contentDir: content/sr
+          languageName: Српски 
+          title: Aeolus
+          weight: 20
