--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://evlakhov.fastmail.com"
+baseURL = "/"
 title = "Aeolus d.o.o. Novi Sad"
 defaultContentLanguage = "en"
 defaultContentLanguageInSubdir = true
