--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,11 +4,27 @@ backend:
 media_folder: "static/images/uploads"
 public_folder: "/images/uploads"
 collections:
-     - label: "Serbian site"
-       name: "sr"
-       files:
-          - label: "Hero Block"
-            name: "main"
-            file: "content/sr/frontpage/sections/main.md"
-            fields:
-               - {label: "Садржај", name: "body", widget: "markdown"}
+#     - label: "Serbian site"
+#       name: "sr"
+#       files:
+#          - label: "Hero Block"
+#            name: "main"
+#            file: "content/sr/frontpage/sections/main.md"
+#            fields:
+#               - {label: "Садржај", name: "body", widget: "markdown"}
+     - name: pages
+     label: Pages
+     label_singulat: 'Page'
+     folder: content/sr
+     create: false
+     nested:
+          depth: 100
+          summary: '{{title}}'
+     fields:
+          - label: Title
+            name: title
+            widget: string
+          - label: Body
+            name: body
+            widget: markdown
+         
