--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -3,7 +3,11 @@ backend:
      branch: master
 media_folder: "static/images/uploads"
 public_folder: "/images/uploads"
-collections:
+i18n:
+     structure: multiple_folders
+     locales: [en, ru, sr]
+     default_locale: sr
+#collections:
 #     - label: "Serbian site"
 #       name: "sr"
 #       files:
@@ -12,19 +16,21 @@ collections:
 #            file: "content/sr/frontpage/sections/main.md"
 #            fields:
 #               - {label: "Садржај", name: "body", widget: "markdown"}
+collections:
      - name: pages
-     label: Pages
-     label_singulat: 'Page'
-     folder: content/sr
-     create: false
-     nested:
-          depth: 100
-          summary: '{{title}}'
-     fields:
-          - label: Title
-            name: title
-            widget: string
-          - label: Body
-            name: body
-            widget: markdown
+       i18n: true 
+       label: Pages
+       label_singular: 'Page'
+       folder: content
+       create: false
+       nested:
+            depth: 100
+            summary: '{{title}}'
+       fields:
+            - label: Title
+              name: title
+              widget: string
+            - label: Body
+              name: body
+              widget: markdown
          
